2010.01.25 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.h:
	  - QR_MODE_{ECI,FNC1A,FNC1B} have been added to QRencodeMode.
	* qrspec.h, mqrspec.h, qrinput.c:
	  - QRSPEC_MODEID_* and MQRSPEC_MODEID_* have been added, and hard coded
	    numbers were replaced with them.

2010.01.22 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/test_qrspec.c:
	  - Code cleanup.
	* tests/decoder.[ch], tests/test_qrencode.c:
	  - Added tests for Micro QR Code.

2010.01.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c:
	  - Bug fix.
	* tests/decoder.[ch]:
	  - Code refactoring.
	* tests/test_{qrencode,mask,monkey}.c, Makefile.am:
	  - New tests added.
	* qrencode_inner.h:
	  - Typo fix.
	* NEWS:
	  - Updated.
	* qrinput.c:
	  - Possible memory errors fixed.
	* configure.ac, tests/Makefile.am:
	  - Added iconv checks.

2010.01.18 Kentaro FUKUCHI <fukuchi@megaui.net>
	* configure.ac:
	  - Configuration cleanups.
	* tests/Makefile.am:
	  - Wrong conditional branch fixed.
	* tests/decoder.[ch], tests/Makefile.am:
	  - Decoding function has been added.
	* tests/test_{qrinput,qrspec,qrencode}.c:
	  - New tests added.

2010.01.16 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.[ch]:
	  - QRcode_encodeData{,MQR,Structured}() have been added.
	* tests/test_qrencode.c:
	  - New test has been added.

2009.11.27 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.h:
	  - Typo fixes.

2009.11.06 Kentaro FUKUCHI <fukuchi@megaui.net>
	* NEWS, README:
	  - Documents updated.
	* qrspec.[ch], mqrspec.[ch]:
	  - *_clearCache were not thread safe.
	  - "Thread unsafe" warnings were removed.
	* rscode.[ch]
	  - free_rs_cache was not thread safe.
	  - "Thread unsafe" warnings were removed.

2009.09.28 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c:
	  - David's patch has been applied. (Thanks to David)
	  - New options '-d' and '--dpi' have been added.
	  - Typo fixes.
	* tests/view_qrcode.c:
	  - Typo fixes.

2009.06.08 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c: