@@ -173,8 +173,8 @@ extern void QRspec_clearCache(void);
 #define QRSPEC_MODEID_AN         2
 #define QRSPEC_MODEID_8          4
 #define QRSPEC_MODEID_KANJI      8
-#define QRSPEC_MODEID_FNC1A      5
-#define QRSPEC_MODEID_FNC1B      9
+#define QRSPEC_MODEID_FNC1FIRST  5
+#define QRSPEC_MODEID_FNC1SECOND 9
 #define QRSPEC_MODEID_STRUCTURE  3
 #define QRSPEC_MODEID_TERMINATOR 0
  
